; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/renesas/extr_sh_eth.c_sh_eth_tsu_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/renesas/extr_sh_eth.c_sh_eth_tsu_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sh_eth_private = type { i64 }

@SH_ETH_OFFSET_INVALID = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sh_eth_private*, i32, i32)* @sh_eth_tsu_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sh_eth_tsu_write(%struct.sh_eth_private* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.sh_eth_private*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.sh_eth_private* %0, %struct.sh_eth_private** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.sh_eth_private*, %struct.sh_eth_private** %4, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i64 @sh_eth_tsu_get_offset(%struct.sh_eth_private* %8, i32 %9)
  store i64 %10, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* @SH_ETH_OFFSET_INVALID, align 8
  %13 = icmp eq i64 %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i64 @WARN_ON(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  br label %26

18:                                               ; preds = %3
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.sh_eth_private*, %struct.sh_eth_private** %4, align 8
  %21 = getelementptr inbounds %struct.sh_eth_private, %struct.sh_eth_private* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* %7, align 8
  %24 = add nsw i64 %22, %23
  %25 = call i32 @iowrite32(i32 %19, i64 %24)
  br label %26

26:                                               ; preds = %18, %17
  ret void
}

declare dso_local i64 @sh_eth_tsu_get_offset(%struct.sh_eth_private*, i32) #1

declare dso_local i64 @WARN_ON(i32) #1

declare dso_local i32 @iowrite32(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
